# walter

./: encoder.py  main.py  motors.py  personality.py  walter.py
controller/: .gitignore  CMakeLists.txt  bcu  bcu_clear  counters.py  display.c  display.h  displays.py  main.c  main.py  motors.c  motors.h  motors.py  state.c  state.h  task_misc.c  task_misc.h  task_serial.c  task_serial.h  tasks.c  tasks.h  upload
controller_mp/: LCD_1inch47.py  displays.py  motors.py  personality.py
